--- a/css/styles.css
+++ b/css/styles.css
@@ -963,21 +963,37 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
   border: 2px solid var(--color-primary-text);
   border-radius: 4px;
   fill: var(--color-white);
+  content:"#";
 }
-.modal-checkbox:checked + .modal-icon-white {
+.modal-link-accept:hover .modal-checkbox ~ .modal-icon-white {
   background-color: var(--color-blue);
   border-color: transparent;
   background-image: url(../images/icon-check.svg);
   background-size: contain;
   background-origin: border-box;
 }
-.modal-checkbox:checked:focus + .modal-icon-white {
+.modal-link-accept .modal-checkbox:checked ~ .modal-icon-white {
+  background-color: var(--color-blue);
+  border-color: transparent;
   background-image: url(../images/icon-check.svg);
+  background-size: contain;
+  background-origin: border-box;
+}
+.modal-icon-white:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.modal-link-accept .modal-checkbox:checked ~ .modal-icon-white:after {
+  display: block;
+}
+.modal-link-accept .modal-icon-white:after {
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-link-terms {
   font-weight: 400;
   font-size: 14px;
- line-height: 1.71;
+  line-height: 1.71;
   color: var(--color-blue);
   margin-left: 2px;
 }
