--- a/css/styles.css
+++ b/css/styles.css
@@ -907,6 +907,7 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
   border-radius: 4px;
   color: var(--color-secondary-text);
   outline: none;
+  resize: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-container-comments{
@@ -965,12 +966,11 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1p
   fill: var(--color-white);
   content:"#";
 }
-.modal-link-accept:hover .modal-checkbox ~ .modal-icon-white {
-  background-color: var(--color-blue);
-  border-color: transparent;
-  background-image: url(../images/icon-check.svg);
-  background-size: contain;
-  background-origin: border-box;
+ .modal-checkbox:focus ~ .modal-icon-white {
+  border-color: var(--color-blue); 
+}
+.modal-checkbox:hover ~ .modal-icon-white {
+  border-color: var(--color-blue); 
 }
 .modal-link-accept .modal-checkbox:checked ~ .modal-icon-white {
   background-color: var(--color-blue);
